       33 and 27 was over 10,000 EXP (roughly 900 messages with a 110-130 second cooldown between them.)
    - Level 33 should now be around level 60 (~30,000 EXP),
    - Level 27 should now be around level 50 (~20,000 EXP), 
    - Level 22 should now be around level 41 (~13,500 EXP)
    - The rate of earning EXP is unchanged.


Version 1.16.1

- Small hotfix for the console logger (it was getting really flooded).

Version 1.16

- $ban may now include a reason. This reason is sent to the log channel for banned users, if there is one.
    - This feature will come for other logtypes soon.
- Logtype "Shadowbans" added! You may now log to a specific channel for shadowban events.
- Logtype "Unshadowbans" added.
- "Violet" color has been darkened for some log events.
- Logtype "UserIsBanned" has been renamed to "bans".
- Logtype "UserIsUnbanned" has been renamed to "unbans".
- Fixed a bug where the ServerMessageLog file would get corrupted, resulting in the messageupdated and messagedeleted logtypes being rendered useless.
- A timer that was supposed to start on Ready never would launch. That is now fixed.
- "Verify message received" now only occurs every 2 minutes (was 1).

Version 1.15.1

- $h redeem command added.
- $h diamonds command added.
- $h supporter command added.
- $supporter and $diamonds commands added.

Version 1.15

- Kaguya Supporter!
    - With the supporter program, users may purchase "keys" that can be redeemed in chat!
    - These keys are one time use, so it is safe to use them in a public chat.
    - This is NOT a recurring subscription!
    - These keys grant you "supporter" status for 30, 60, or 90 days.
    - The keys stack, so if you wish to purchase multiple keys you may! You may also give them away if you wish.
- What does a supporter get?
    - Supporters get a few small perks.
    - Supporters get a stackable 2x critical hit ratio (stacks with the 2x $voteclaim bonus)
    - Supporters have no "gamble limit" (it's 25,000 for normal users).